2008-05-28  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #532597

	* e-selection-model-array.h: (struct ESelectionModelArray):
	* e-selection-model-array.c: (es_row_model_to_sorted),
	(es_row_sorted_to_model), (e_selection_model_array_delete_rows),
	(e_selection_model_array_insert_rows), (esma_invert_selection),
	(e_selection_model_array_move_row), (esma_clear), (esma_select_all),
	(esma_change_cursor), (esma_set_selection_end),
	(e_selection_model_array_init): Work with sorted cursor row to keep
	right position after insert/delete/move row(s).

2008-05-22  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #534360

	* e-activity-handler.h:
	* e-attachment-bar.h:
	* e-attachment.c:
	* e-calendar-item.c:
	* e-calendar-item.h:
	* e-calendar.h:
	* e-canvas-background.h:
	* e-canvas-vbox.h:
	* e-canvas.c:
	* e-canvas.h:
	* e-cell-date-edit.c:
	* e-cell-date-edit.h:
	* e-combo-button.c:
	* e-combo-button.h:
	* e-config-page.h:
	* e-dateedit.c:
	* e-dateedit.h:
	* e-dropdown-button.c:
	* e-dropdown-button.h:
	* e-filter-bar.c:
	* e-gui-utils.c:
	* e-gui-utils.h:
	* e-image-chooser.c:
	* e-map.c:
	* e-map.h:
	* e-multi-config-dialog.h:
	* e-popup-menu.h:
	* e-printable.h:
	* e-reflow.h:
	* e-send-options.h:
	* e-task-bar.h:
	* e-task-widget.h:
	* e-url-entry.c:
	* e-url-entry.h:
	Migrate from deprecated GtkObject symbols to GObject equivalents.

2008-05-14  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #311042, Patch by Milan Crha

	* e-info-label.c: (el_size_allocate), (el_class_init),
	(e_info_label_set_info), (get_text_full_width): Allocate size for
	location and info labels differently, than GtkHBox does, to be able
	to minimize it as much as possible and do not waste empty space.

2008-05-06  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #424744

	* e-attachment-bar.c:
	* e-unicode.c:
	Use camel-iconv.c instead of e-iconv.h (now deprecated).

2008-04-30  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #528288
