@@ -67,11 +67,11 @@ main (int argc, char **argv)
 
 	app = gnome_app_new ("Test", "Test");
 	gtk_window_set_default_size (GTK_WINDOW (app), 300, 200);
-	gtk_window_set_policy (GTK_WINDOW (app), FALSE, TRUE, TRUE);
+	gtk_window_set_resizable (GTK_WINDOW (app), TRUE);
 	gtk_container_set_border_width (GTK_CONTAINER (app), 8);
 
-	g_signal_connect((app), "delete_event",
-			    G_CALLBACK (delete_event_cb), app);
+	g_signal_connect (app, "delete_event",
+			  G_CALLBACK (delete_event_cb), app);
 
 	table = gtk_table_new (3, 3, FALSE);
 	gtk_table_set_row_spacings (GTK_TABLE (table), 4);
@@ -81,17 +81,17 @@ main (int argc, char **argv)
 
 	/* EDateEdit 1. */
 	dedit = E_DATE_EDIT (e_date_edit_new ());
-	gtk_table_attach (GTK_TABLE (table), (GtkWidget*) dedit,
+	gtk_table_attach (GTK_TABLE (table), GTK_WIDGET (dedit),
 			  0, 1, 0, 1, GTK_FILL, GTK_EXPAND, 0, 0);
-	gtk_widget_show ((GtkWidget*) (dedit));
+	gtk_widget_show (GTK_WIDGET (dedit));
 
 #if 0
-	g_signal_connect((dedit), "date_changed",
-			    G_CALLBACK (on_date_changed), "1");
-	g_signal_connect((dedit), "time_changed",
-			    G_CALLBACK (on_time_changed), "1");
+	g_signal_connect (dedit, "date_changed",
+			  G_CALLBACK (on_date_changed), "1");
+	g_signal_connect (dedit, "time_changed",
+			  G_CALLBACK (on_time_changed), "1");
 #else
-	g_signal_connect((dedit), "changed",
+	g_signal_connect (dedit, "changed",
 			    G_CALLBACK (on_changed), "1");
 #endif
 
@@ -114,21 +114,21 @@ main (int argc, char **argv)
 	e_date_edit_set_show_time (dedit, FALSE);
 
 #if 0
-	g_signal_connect((dedit), "date_changed",
-			    G_CALLBACK (on_date_changed), "2");
-	g_signal_connect((dedit), "time_changed",
-			    G_CALLBACK (on_time_changed), "2");
+	g_signal_connect (dedit, "date_changed",
+			  G_CALLBACK (on_date_changed), "2");
+	g_signal_connect (dedit, "time_changed",
+			  G_CALLBACK (on_time_changed), "2");
 #else
-	g_signal_connect((dedit), "changed",
-			    G_CALLBACK (on_changed), "2");
+	g_signal_connect (dedit, "changed",
+			  G_CALLBACK (on_changed), "2");
 #endif
 
 	button = gtk_button_new_with_label ("Print Date");
 	gtk_table_attach (GTK_TABLE (table), button,
 			  1, 2, 1, 2, 0, 0, 0, 0);
 	gtk_widget_show (button);
-	g_signal_connect((button), "clicked",
-			    G_CALLBACK (on_get_date_clicked), dedit);
+	g_signal_connect (button, "clicked",
+			  G_CALLBACK (on_get_date_clicked), dedit);
 
 	/* EDateEdit 3. */
 	dedit = E_DATE_EDIT (e_date_edit_new ());
@@ -142,29 +142,28 @@ main (int argc, char **argv)
 	e_date_edit_set_allow_no_date_set (dedit, TRUE);
 
 #if 0
-	g_signal_connect((dedit), "date_changed",
-			    G_CALLBACK (on_date_changed), "3");
-	g_signal_connect((dedit), "time_changed",
-			    G_CALLBACK (on_time_changed), "3");
+	g_signal_connect (dedit, "date_changed",
+			  G_CALLBACK (on_date_changed), "3");
+	g_signal_connect (dedit, "time_changed",
+			  G_CALLBACK (on_time_changed), "3");
 #else
-	g_signal_connect((dedit), "changed",
-			    G_CALLBACK (on_changed), "3");
+	g_signal_connect (dedit, "changed",
+			  G_CALLBACK (on_changed), "3");
 #endif
 
 	button = gtk_button_new_with_label ("Print Date");
 	gtk_table_attach (GTK_TABLE (table), button,
 			  1, 2, 2, 3, 0, 0, 0, 0);
 	gtk_widget_show (button);
-	g_signal_connect((button), "clicked",
-			    G_CALLBACK (on_get_date_clicked), dedit);
+	g_signal_connect (button, "clicked",
+			  G_CALLBACK (on_get_date_clicked), dedit);
 
 	button = gtk_button_new_with_label ("Toggle 24-hour");
 	gtk_table_attach (GTK_TABLE (table), button,
 			  2, 3, 2, 3, 0, 0, 0, 0);
 	gtk_widget_show (button);
-	g_signal_connect((button), "clicked",
-			    G_CALLBACK (on_toggle_24_hour_clicked),
-			    dedit);
+	g_signal_connect (button, "clicked",
+			  G_CALLBACK (on_toggle_24_hour_clicked), dedit);
 
 	gtk_widget_show (app);
 
@@ -281,5 +280,4 @@ on_changed		(EDateEdit	*dedit,
 		g_print (" Time Invalid\n");
 	}
 }
-
 
